OpenJMLTest/test/escrmloop2/expected
test/escrmloop2/Lemmas.java:47: error: Expected loop specifications while in JML: assignable is not a loop specification keyword
          @ assignable \nothing;
            ^
Operation not performed because of parse or type errors
1 error
